Run IntelliJ inspection